--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -1,9 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="PreCompile.cpp" />
+    <ClCompile Include="ContentsCore.cpp" />
+    <ClCompile Include="PreCompile.cpp">
+      <Filter>PreCompile</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="PreCompile.h" />
+    <ClInclude Include="ContentsCore.h" />
+    <ClInclude Include="PreCompile.h">
+      <Filter>PreCompile</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="PreCompile">
+      <UniqueIdentifier>{e2f3126a-53e3-4dff-8bab-f76e0adfb37b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
