--- a/DIrectX/GameEngineCore/GameEngineCore.vcxproj.filters
+++ b/DIrectX/GameEngineCore/GameEngineCore.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClInclude Include="GameEngineCamera.h">
       <Filter>Rendering</Filter>
     </ClInclude>
+    <ClInclude Include="GameEngineCoreObject.h">
+      <Filter>Object</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameEngineActor.cpp">
@@ -66,6 +69,9 @@
     </ClCompile>
     <ClCompile Include="GameEngineCamera.cpp">
       <Filter>Rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEngineCoreObject.cpp">
+      <Filter>Object</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
