--- a/DIrectX/GameEngineCore/GameEngineCore.vcxproj.filters
+++ b/DIrectX/GameEngineCore/GameEngineCore.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="GameEngineResources.h">
       <Filter>Rendering</Filter>
     </ClInclude>
+    <ClInclude Include="GameEngineRenderTarget.h">
+      <Filter>Rendering</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameEngineActor.cpp">
@@ -85,6 +88,9 @@
       <Filter>Rendering</Filter>
     </ClCompile>
     <ClCompile Include="GameEngineResources.cpp">
+      <Filter>Rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEngineRenderTarget.cpp">
       <Filter>Rendering</Filter>
     </ClCompile>
   </ItemGroup>
