김준영 : 상수 버퍼

--- a/DIrectX/GameEngineCore/GameEngineCore.vcxproj
+++ b/DIrectX/GameEngineCore/GameEngineCore.vcxproj
@@ -175,6 +175,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="GameEngineConstantBuffer.h" />
     <ClInclude Include="GameEngineCore.h">
       <SubType>
       </SubType>
@@ -221,6 +222,7 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="GameEngineConstantBuffer.cpp" />
     <ClCompile Include="GameEngineCore.cpp">
       <SubType>
       </SubType>
