--- a/DIrectX/GameEngineCoreShader/GameEngineCoreShader.vcxproj
+++ b/DIrectX/GameEngineCoreShader/GameEngineCoreShader.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <FxCompile Include="ColorShader.fx" />
     <FxCompile Include="TextureShader.fx" />
+    <FxCompile Include="Transform.fx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="ShaderRule.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
