김준영 : 유닛 팀설정, 방향 전환 기능 추가

--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj
@@ -171,6 +171,7 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Bird.cpp" />
     <ClCompile Include="ContentsCore.cpp" />
     <ClCompile Include="GameUnit.cpp">
       <SubType>
@@ -211,6 +212,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Bird.h" />
     <ClInclude Include="ContentsCore.h" />
     <ClInclude Include="ContentsEnum.h" />
     <ClInclude Include="GameUnit.h">
